# axum-media

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
axum-media/: Cargo.toml
axum-media/src/: accept.rs  anymedia.rs  error.rs  lib.rs  mimetypes.rs
axum-media/tests/: json.rs  urlencoded.rs
crates/axum-media/: Cargo.toml
crates/axum-media/src/: accept.rs  anymedia.rs  lib.rs
crates/axum-media/tests/: json.rs  urlencoded.rs  utils.rs
examples/mime-convertor/: Cargo.toml
examples/mime-convertor/src/: main.rs
examples/simple-app/: Cargo.toml
examples/simple-app/src/: main.rs
