[package]
name = "axum-media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
urlencoded = ["serde_urlencoded"]

[dependencies]
axum = { version = "0.6.20" }
thiserror = "1.0.50"
mime = "0.3.17"
bytes = "1.5.0"

serde = { version = "1.0.192" }
serde_path_to_error = "0.1.14"

serde_json = { version = "1.0.108" }
serde_urlencoded = { version = "0.7.1", optional = true }

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
axum-test-helper = "0.3.0"
