[package]
name = "axum-media"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marekvospel/axum-media"
keywords = ["axum", "http", "serde", "web"]
authors = ["Marek Vospěl <marek@vospel.cz>"]
description = "A simple way to use multiple media types with axum"
edition = "2021"

[features]
default = []
urlencoded = ["dep:serde_urlencoded"]


[dependencies]
axum = { version = "0.7.4" }
thiserror = "1.0.50"
mime = "0.3.17"
bytes = "1.5.0"
tracing = "0.1.40"

serde = { version = "1.0.192" }
serde_path_to_error = "0.1.14"

serde_json = { version = "1.0.108" }
serde_urlencoded = { version = "0.7.1", optional = true }

[dev-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13" }
http-body-util = { version = "0.1" }
anyhow = { version = "1.0.79" }