[package]
name = "mime-convertor"
description = "A simple app that converts content between content types"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.4"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
axum-media = { path = "../../crates/axum-media", features = ["urlencoded"] }
serde = { version = "1.0.192", features = ["derive"] }
